--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -15,11 +15,17 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'admin.automations' %}active{% endif %}" 
-                           href="{{ url_for('admin.automations') }}">
-                            <i class="fas fa-robot"></i> Automations
-                        </a>
-                    </li>
+                         <a class="nav-link {% if request.endpoint == 'admin.exchanges' %}active{% endif %}" 
+                            href="{{ url_for('admin.exchanges') }}">
+                             <i class="fas fa-key"></i> Exchanges
+                         </a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link {% if request.endpoint == 'admin.strategies' %}active{% endif %}" 
+                            href="{{ url_for('admin.strategies') }}">
+                             <i class="fas fa-chart-line"></i> Trading Strategies
+                         </a>
+                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'admin.settings' %}active{% endif %}" 
                            href="{{ url_for('admin.settings') }}">
